Minor changes in Navbar and contact

--- a/styles.css
+++ b/styles.css
@@ -42,8 +42,30 @@ ul li{
     list-style: none;
 }
 
-a{
+.navbar a{
     color: #000;
+    /* font-weight: 550;
+    letter-spacing: 0.5px; */
+    position: relative;
+}
+
+.navbar a:after{
+    content: "";
+    position: absolute;
+    background-color: #099e85;
+    height: 3px;
+    width: 0;
+    left: 0;
+    bottom: -10px;
+    transition: 0.3s;
+}
+
+.navbar a:hover{
+    color: #067a67;
+}
+
+.navbar a:hover::after{
+    width: 100%;
 }
 
 .header-text{
